Se agregan detalles adicionales

--- a/index.html
+++ b/index.html
@@ -22,16 +22,21 @@
         <h1 class="animated-text">
           Tienda Online El Hueco Medellín
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a
-            href=""
+            href="https://jonnathanmtalent.github.io/#seccion10"
             style="color: var(--main-color)"
             target="_blank"
             >Peliculas Play 4 y 5</a
           >
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a
-            href=""
+            href="https://jonnathanmtalent.github.io/#seccion11"
             style="color: var(--main-color)"
             target="_blank"
             >Consolas Play 4 y 5</a
+          >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a
+            href="https://wa.me/573022264607?text=Hola%20me%20interesa%20tu%20trabajo!"
+            style="color: var(--main-color)"
+            target="_blank"
+            >Desarrollado por Jonnathan Monroy</a
           >
         </h1>
       </center>
@@ -46,6 +51,8 @@
         <a href="#seccion12" data-scroll-spy>Próximamente</a>
         <a href="#seccion16" data-scroll-spy>Videos de presentación</a>
         <a href="#seccion10" data-scroll-spy>Busca tu juego</a>
+        <a href="#seccion11" data-scroll-spy>Busca tu  consola</a>
+        <a href="#seccion13" data-scroll-spy>Accesorios</a>
         <a href="#seccion3" data-scroll-spy>
           Cuenta regresiva para nuevos juegos</a
         >
@@ -155,10 +162,9 @@
 
         </div>
       </section>
-      <section id="seccion11" class="section" data-scroll-spy>
-              <section id="seccion10" class="section" data-scroll-spy>
+      <section id="seccion10" class="section" data-scroll-spy>
         <div class="textBox">
-          <h2>Busca tu película! 🔎</h2>
+          <h2>Busca tu juego! 🔎</h2>
           <input
             type="search,"
             placeholder="Buscar..."
@@ -166,6 +172,7 @@
           />
         </div>
         <article class="cards">
+             
           <figure class="card rebotar">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
@@ -179,7 +186,7 @@
               </figcaption>
             </a>
           </figure>
-          <figure class="card rebotar">
+          <figure class="card">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
               target="_blank"
@@ -195,7 +202,7 @@
               </figcaption>
             </a>
           </figure>
-          <figure class="card rebotar">
+          <figure class="card ">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
               target="_blank"
@@ -291,168 +298,200 @@
           </figure>
         </article>
       </section>
+        <section id="seccion11" class="section" data-scroll-spy>
         <div class="textBox">
-          <h2>Busca tu película! 🔎</h2>
+          <h2>Busca tu consola! 🔎</h2>
           <input
-            type="search,"
-            placeholder="Buscar..."
-            class="card-filter transparent-input"
+            type="search"
+            placeholder="Buscar consola"
+            class="card-filterConsole transparent-input"
           />
         </div>
         <article class="cards">
-          <figure class="card rebotar">
+          <figure class="cardConsole">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
               target="_blank"
             >
-              <img src="portafolio/assets/images/callDuty.JPG" alt="React" />
+              <img src="portafolio/assets/images/play5Blanco.jpg" alt="React" />
               <figcaption>
-                <p class="p_card">Call of Duty</p>
-                <p class="p_card">$200.000</p>
+                <p class="p_card">Play 5 Blanco</p>
+                <p class="p_card">$2'000.000</p>
                 <p class="p_card">Existencias: 2</p>
               </figcaption>
             </a>
           </figure>
-          <figure class="card rebotar">
+          <figure class="cardConsole">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
               target="_blank"
             >
-              <img
-                src="portafolio/assets/images/FinalFantasy.JPG"
-                alt="javaScript"
-              />
+              <img src="portafolio/assets/images/play5_fondoAzul.avif" alt="React" />
               <figcaption>
-                <p class="p_card">Finall Fantasy</p>
-                <p class="p_card">$180.000</p>
-                <p class="p_card">Existencias: 3</p>
-              </figcaption>
-            </a>
-          </figure>
-          <figure class="card rebotar">
-            <a
-              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
-              target="_blank"
-            >
-              <img src="portafolio/assets/images/goodOfWar.JPG" alt="NodeJS" />
-              <figcaption>
-                <p class="p_card">God of war</p>
-                <p class="p_card">$250.000</p>
+                <p class="p_card">Play 5 Blanco</p>
+                <p class="p_card">$2'000.000</p>
                 <p class="p_card">Existencias: 2</p>
               </figcaption>
             </a>
           </figure>
-          <figure class="card">
+          <figure class="cardConsole">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
               target="_blank"
             >
-              <img
-                src="portafolio/assets/images/GrandthereAutho.JPG"
-                alt="SQL"
-              />
+              <img src="portafolio/assets/images/play5Negra.jpg" alt="React" />
               <figcaption>
-                <p class="p_card">Grand there autho</p>
-                <p class="p_card">$210.000</p>
+                <p class="p_card">Play 5 Blanco</p>
+                <p class="p_card">$2'000.000</p>
+                <p class="p_card">Existencias: 2</p>
+              </figcaption>
+            </a>
+          </figure>
+                    <figure class="cardConsole">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/play4.JPG" alt="React" />
+              <figcaption>
+                <p class="p_card">Play 4</p>
+                <p class="p_card">$1'000.000</p>
                 <p class="p_card">Existencias: 4</p>
               </figcaption>
             </a>
           </figure>
-          <figure class="card">
+          <figure class="cardConsole">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
               target="_blank"
             >
-              <img src="portafolio/assets/images/avengers.JPG" alt="SQL" />
+              <img src="portafolio/assets/images/xboxBlanco.JPG" alt="React" />
               <figcaption>
-                <p class="p_card">Avengers</p>
-                <p class="p_card">$208.000</p>
-                <p class="p_card">Existencias: 5</p>
-              </figcaption>
-            </a>
-          </figure>
-          <figure class="card">
-            <a
-              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
-              target="_blank"
-            >
-              <img src="portafolio/assets/images/deadSpace.JPG" alt="SQL" />
-              <figcaption>
-                <p class="p_card">Dead space</p>
-                <p class="p_card">$210.000</p>
-                <p class="p_card">Existencias: 3</p>
-              </figcaption>
-            </a>
-          </figure>
-          <figure class="card">
-            <a
-              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
-              target="_blank"
-            >
-              <img src="portafolio/assets/images/fifa.JPG" alt="SQL" />
-              <figcaption>
-                <p class="p_card">Fifa 24</p>
-                <p class="p_card">$280.000</p>
+                <p class="p_card">Xbox Blanco</p>
+                <p class="p_card">$3'000.000</p>
                 <p class="p_card">Existencias: 2</p>
               </figcaption>
             </a>
           </figure>
-          <figure class="card">
+          <figure class="cardConsole">
             <a
               href="./portafolio/manejo_del_dom/js/dom/formPago.html"
               target="_blank"
             >
-              <img src="portafolio/assets/images/callOfDuty.JPG" alt="SQL" />
+              <img src="portafolio/assets/images/xboxNegro.JPG" alt="React" />
               <figcaption>
-                <p class="p_card">Call of Duty MW</p>
-                <p class="p_card">$260.000</p>
+                <p class="p_card">Xbox Negro</p>
+                <p class="p_card">$2'000.000</p>
                 <p class="p_card">Existencias: 2</p>
-              </figcaption>
-            </a>
-          </figure>
-          <figure class="card">
-            <a
-              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
-              target="_blank"
-            >
-              <img src="portafolio/assets/images/mortalKombat.JPG" alt="SQL" />
-              <figcaption>
-                <p class="p_card">Mortal Kombat</p>
-                <p class="p_card">$280.000</p>
-                <p class="p_card">Existencias: 1</p>
               </figcaption>
             </a>
           </figure>
         </article>
       </section>
-      <!-- <section id="seccion3" class="section" data-scroll-spy>
+    <section id="seccion13" class="section" data-scroll-spy>
         <div class="textBox">
-          <p id="reloj2" class="girar">⏳</p>
+          <h2>Busca tu Accesorio! 🔎</h2>
+          <input
+            type="search"
+            placeholder="Buscar consola"
+            class="card-filterAccesorios transparent-input"
+          />
+        </div>
+        <article class="cards">
+                      <figure class="cardAccesorio">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/pcRojo.jpeg" alt="React" />
+              <figcaption>
+                <p class="p_card">Iluminacion pc</p>
+                <p class="p_card">$50.000</p>
+                <p class="p_card">Existencias:4</p>
+              </figcaption>
+            </a>
+          </figure>
+                      <figure class="cardAccesorio">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/pcAzul.jpeg" alt="React" />
+              <figcaption>
+                <p class="p_card">Iluminacion pc</p>
+                <p class="p_card">$50.000</p>
+                <p class="p_card">Existencias: 3</p>
+              </figcaption>
+            </a>
+          </figure>
+                    <figure class="cardAccesorio">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/fortniteAzul.jpeg" alt="React" />
+              <figcaption>
+                <p class="p_card">Lampara</p>
+                <p class="p_card">$98.000</p>
+                <p class="p_card">Existencias: 3</p>
+              </figcaption>
+            </a>
+          </figure>
+          <figure class="cardAccesorio">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/carcasa.jpeg" alt="React" />
+              <figcaption>
+                <p class="p_card">Carcasa Play</p>
+                <p class="p_card">$300.000</p>
+                <p class="p_card">Existencias: 3</p>
+              </figcaption>
+            </a>
+          </figure>
+          <figure class="cardAccesorio">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/control.jpeg" alt="React" />
+              <figcaption>
+                <p class="p_card">Estanteria controles</p>
+                <p class="p_card">$280.000</p>
+                <p class="p_card">Existencias: 2</p>
+              </figcaption>
+            </a>
+          </figure>
+    <figure class="cardAccesorio">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/accesoriopc.jpeg" alt="React" />
+              <figcaption>
+                <p class="p_card">Estanteria controles</p>
+                <p class="p_card">$280.000</p>
+                <p class="p_card">Existencias: 2</p>
+              </figcaption>
+            </a>
+          </figure>
+              <figure class="cardAccesorio">
+            <a
+              href="./portafolio/manejo_del_dom/js/dom/formPago.html"
+              target="_blank"
+            >
+              <img src="portafolio/assets/images/fortniteRojo.jpeg" alt="React" />
+              <figcaption>
+                <p class="p_card">Lámpara</p>
+                <p class="p_card">$98.000</p>
+                <p class="p_card">Existencias: 2</p>
+              </figcaption>
+            </a>
+          </figure>
 
-          <h2>Cuenta regresiva para nuevos juegos</h2> -->
-      <!-- <form id="cuenta-regresiva" action="">
-            <input
-              class="transparent-input"
-              type="date"
-              name="fecha"
-              title="La fecha es requerida"
-              required
-            />
-
-            <input
-              class="transparent-input"
-              type="time"
-              name="hora"
-              title="La fecha es requerida"
-              required
-            />
-
-            <br />
-            <input class="blue-btn" type="submit" value="Calcular" />
-          </form> -->
-      <!-- <div id="countdown"></div> -->
-      <!-- </div>
-      </section> -->
+        </article>
+      </section>
       <section id="seccion4" class="section" data-scroll-spy>
         <div class="textBox">
           <p id="celular" class="rebotar">📱</p>
